views/styles/layout-admin.scss
.wrapper--div{
    overflow-x: hidden;
}

nav{
    background-color: #f5e9b0;
    z-index: 3;

    justify-content: center;

    width: 100vw;

    font-size: 22px;

    position: fixed;
    top: 0;
    left: 0;
}

.heading{
    padding: 15px 37px 5px 25px;
    a{
        font-size: 20px;
    }
}

.nav--options{
    display: flex;
    justify-content: space-around;
    align-items: center;
    
    li{
        position: relative;
        width: 100%;
        height: 100%;
        padding: 5px 0 10px;
        text-align: center;

        button{
            font-size: 15px;
            font-weight: 500;
            height:inherit ;
            width:inherit ;
            background-color:inherit;
            outline: none;
            border: none;
            cursor: pointer;
        }
    }
}

.border--bottom{
    position: absolute;
    height: 2px;
    width: 100%;
    background-color: #f5b461;
    bottom: 0;
}

.main{
    width: 200%;
    display: none;
    position: absolute;
    padding-top: 130px;
}

.tab--slide{
    transform: translateX(100%);
}
.page--slide{
    transform: translateX(-50%);
}

.loading--element{
    position: fixed;
    top: 0;
    left: 0;

    height: 100vh;
    width: 100vw;

    display: flex;
    justify-content: center;
    align-items: center;
    img{
        height: 50px;
        width: 50px;
    }
}


.transparent--customscrollbar::-webkit-scrollbar{
    width: 0;   
}

.main--customscrollbar::-webkit-scrollbar{
    width: 5px;   
}

.main--customscrollbar::-webkit-scrollbar-track {
    background:transparent; 
}

.main--customscrollbar::-webkit-scrollbar-thumb {
    background: rgba(136, 136, 136, 0.199); 
    border-radius:5px;
}

.main--customscrollbar::-webkit-scrollbar-thumb:hover {
    background: rgba(85, 85, 85, 0.582); 
}

.patient--deletebutton{
    transition: background-color .2s ease;
    background-color: inherit;
    text-decoration:underline;
    padding: 0;
    text-align: start;
    border-radius: 5px;
    padding: 1px 10px;
}

.nav--links:active{
    background-color:inherit;
}

.patient--deletebutton:hover{
    background-color: #9ad3bc;
}
.patient--deletebutton:active{
    background-color: #328162;
}

.orange--button{
    background-color: #f5b461;
    transition: background-color .2s ease;
}
.orange--button:hover{
    background-color: #dba45c;
}
.orange--button:active{
    background-color: #b37b31;
}

.blue--button{
    background-color: #9ad3bc;
    transition: background-color .2s ease;
}
.blue--button:hover{
    background-color: #72b99d;
}
.blue--button:active{
    background-color: #328162;
}

.main--title{
    font-size: 24px;
    padding-bottom:15px;
}

.main--heading{
    h3{
        font-size: 18px;
    }
}
.main--body{
    font-size: 16px;
    p,pre,input,button{
        font-size: 16px;
        // font-family: 'Poppins', sans-serif;
    }
    small{
        font-size: 14px;
        line-height: 1.3;
    }
}

.profile--button{
    border-radius: 5px;
    border: none;
    outline: none;
    // padding:5px 8px;
    cursor: pointer;
}

.tab--contents{
    width: 100%;
    padding:0 15px;
}

.tab--containers{
    background-color: #f3eac2;
    border-radius: 6px;
    margin-bottom:33px;
}

.hometab--containers{
    padding: 20px;
}

.hometab--containers:last-child{
    padding:0;
    margin-bottom: 20px;
}

.covidupdate--heading{
    line-height: 1.3;
    padding-bottom: 15px;
}

.covidupdate--date{
    display: block;
    font-weight: 400;
    text-decoration: underline;
    font-size: 19px;
}

.covidupdate--section{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
    align-items: center;
    justify-items: center;
    gap: 10px;
}

.covidupdate{
    background-color: white;
    padding: 10px;
    line-height: 1.2;
    border-radius: 5px;
    height:14vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.covidupdate--title{
    font-size: 18px;
}

.covidupdate--count{
    margin-top: 4px;
    font-size: 37px;
}

.block2 {
    padding-bottom: 5px;
    position: relative;
}

.notes--heading {
    font-size: 18px;
    font-weight: normal;
}

.notes{
    font-size: 14px;
    border: 1px solid #f5b461;
    border-radius: 5px;
    padding: 15px;
}

.addpatientform--container{
    position: relative;
    display: none;
}

.addpatientform--errormessage{
    display: none;
    border: 1px solid #ec524b;
    padding: 5px 10px;
    border-radius: 5px;
    margin-bottom: 10px;
}

.addpatientform{
    position: absolute;
    bottom: 51;
    left: 0;
    
    display: flex;
    flex-direction: column;
    
    padding: 10px;
    background-color: #fff;
    border-radius: 5px;
    width: 73vw;
    input{
        margin-bottom:10px ;
        border: none;
    }
    button{
        // background-color: #bfd8ce;
        padding: 0;
        width: 100%;
    }
    button:first-child{
        margin-right:10px;
    }
}

.addpatientbutton--container{
    display: flex;
}

.covidpatientlist--container>div,.covidpatientlist--container>form{
    margin-bottom: 15px;
}

.covidpatientlist>div,.covidpatientlist--title{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 5px;
}

.covidpatientlist--title{
    margin-bottom: 5px;
    h3{
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
    }
}

.covidpatientlist--title>div{
    h3{
        text-align: start;
    }
}

.covidpatientlist{
    overflow-y: scroll;
    height: 45vh;
    border-top: 1px solid black;
    border-bottom: 1px solid black;
    p{
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
    }
    input{
        width: 100%;
        text-align: center;
        border: none;
        background-color:inherit;
    }
}

.covidpatientlist>div:last-child{
    border-bottom: none;
}
/* ... */

