try to fix body overflow

--- a/views/styles/layout-admin.scss
+++ b/views/styles/layout-admin.scss
@@ -1,5 +1,6 @@
 .wrapper--div{
-    overflow-x: hidden;
+    overflow-x: hidden !important;
+    width: 100%;
 }
 
 nav{
